--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -19,3 +19,4 @@ jobs:
         env:
           DEFAULT_BRANCH: main
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          VALIDATE_JAVASCRIPT_STANDARD: false # Disable Standard JS linting
