--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start --tunnel",
+    "local": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
@@ -25,7 +26,8 @@
     "react-native-web": "~0.19.6",
     "undefined": "@react-native\\assets-registry\\registry",
     "webpack-dev-server": "^4.15.1",
-    "react-native-svg": "13.9.0"
+    "react-native-svg": "13.9.0",
+    "@expo/ngrok": "4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
