--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/ngrok": "4.1.0",
     "@expo/webpack-config": "^19.0.0",
-    "@react-native-community/datetimepicker": "^7.6.1",
     "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-community/datetimepicker": "^7.6.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-picker/picker": "^2.5.1",
     "@react-navigation/native": "^6.1.8",
@@ -21,13 +22,18 @@
     "axios": "^1.6.2",
     "expo": "~49.0.13",
     "expo-status-bar": "~1.6.0",
+    "formik": "^2.4.5",
+    "libphonenumber-js": "^1.10.49",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.5",
-    "react-native-element-dropdown": "^2.10.0",
+    "react-native-country-selector": "^1.0.7",
     "react-native-dotenv": "^3.4.9",
+    "react-native-element-dropdown": "^2.10.0",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-localize": "^3.0.3",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
+    "react-native-phone-code-select": "^1.1.1",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
@@ -36,7 +42,7 @@
     "react-redux": "^8.1.3",
     "undefined": "@react-native\\assets-registry\\registry",
     "webpack-dev-server": "^4.15.1",
-    "@expo/ngrok": "4.1.0"
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
