--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
+    "react-native-swiper": "^1.6.0",
     "react-native-web": "~0.19.6",
     "webpack-dev-server": "^4.15.1"
   },
