--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
     "@expo/webpack-config": "^19.0.0",
+    "@gorhom/bottom-sheet": "^4.5.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native/assets-registry": "^0.74.0",
     "@react-navigation/native": "^6.1.8",
@@ -24,7 +25,6 @@
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-simple-bottom-sheet": "^1.0.4",
     "react-native-svg": "13.9.0",
     "react-native-swiper": "^1.6.0",
     "react-native-web": "~0.19.6",
