--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start --tunnel",
     "local": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -15,32 +15,34 @@
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/datetimepicker": "^7.6.1",
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-google-signin/google-signin": "^10.1.1",
     "@react-native-picker/picker": "^2.5.1",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/stack": "^6.3.18",
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.6.2",
     "expo": "~49.0.13",
+    "expo-auth-session": "~5.0.2",
+    "expo-random": "~13.2.0",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "formik": "^2.4.5",
+    "json-schema-deref-sync": "^0.14.0",
     "libphonenumber-js": "^1.10.49",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.5",
-    "react-native-country-selector": "^1.0.7",
     "react-native-dotenv": "^3.4.9",
     "react-native-element-dropdown": "^2.10.0",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-localize": "^3.0.3",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
-    "react-native-phone-code-select": "^1.1.1",
     "react-native-reanimated": "~3.3.0",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
     "react-native-web": "~0.19.6",
     "react-redux": "^8.1.3",
-    "undefined": "@react-native\\assets-registry\\registry",
     "webpack-dev-server": "^4.15.1",
     "yup": "^1.3.2"
   },
