--- a/package.json
+++ b/package.json
@@ -10,14 +10,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/ngrok": "4.1.0",
     "@expo/vector-icons": "^13.0.0",
     "@expo/webpack-config": "^19.0.0",
     "@gorhom/bottom-sheet": "^4.5.1",
-    "@react-native-community/masked-view": "^0.1.11",
-    "@react-native/assets-registry": "^0.74.0",
-    "@expo/ngrok": "4.1.0",
     "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-native-picker/picker": "^2.5.1",
+    "@react-native/assets-registry": "^0.74.0",
     "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/stack": "^6.3.18",
@@ -33,11 +33,13 @@
     "react-native-gesture-handler": "~2.12.0",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
     "react-native-reanimated": "~3.3.0",
+    "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "13.9.0",
     "react-native-swiper": "^1.6.0",
     "react-native-web": "~0.19.6",
+    "react-native-web-swiper": "^2.2.4",
     "react-redux": "^8.1.3",
     "webpack-dev-server": "^4.15.1"
   },
