--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-native-web": "~0.19.6",
     "react-redux": "^8.1.3",
     "undefined": "@react-native\\assets-registry\\registry",
-    "webpack-dev-server": "^4.15.1"
+    "webpack-dev-server": "^4.15.1",
+    "expo-checkbox": "~2.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
