--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "react-native-swiper": "^1.6.0",
     "react-native-web": "~0.19.6",
     "react-redux": "^8.1.3",
-    "webpack-dev-server": "^4.15.1"
+    "webpack-dev-server": "^4.15.1",
     "expo-checkbox": "~2.4.0"
   },
   "devDependencies": {
