--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.6.2",
     "expo": "~49.0.13",
+    "expo-image-picker": "~14.3.2",
     "expo-status-bar": "~1.6.0",
+    "firebase": "^10.7.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.5",
