--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.6.2",
     "expo": "~49.0.13",
+    "expo-checkbox": "~2.4.0",
     "expo-image-picker": "~14.3.2",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.7.1",
@@ -42,7 +43,7 @@
     "react-native-web": "~0.19.6",
     "react-redux": "^8.1.3",
     "webpack-dev-server": "^4.15.1",
-    "expo-checkbox": "~2.4.0"
+    "@react-native-community/datetimepicker": "7.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
