--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@expo/webpack-config": "^19.0.0",
     "@gorhom/bottom-sheet": "^4.5.1",
     "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-community/datetimepicker": "7.2.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-picker/picker": "^2.5.1",
     "@react-native/assets-registry": "^0.74.0",
@@ -28,6 +29,7 @@
     "expo-image-picker": "~14.3.2",
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.7.1",
+    "formik": "^2.4.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.5",
@@ -43,7 +45,8 @@
     "react-native-web": "~0.19.6",
     "react-redux": "^8.1.3",
     "webpack-dev-server": "^4.15.1",
-    "@react-native-community/datetimepicker": "7.2.0"
+    "yup": "^1.3.3",
+    "yup-password": "^0.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
