--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "@expo/webpack-config": "^19.0.0",
     "@gorhom/bottom-sheet": "^4.5.1",
     "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-community/datetimepicker": "7.2.0",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-picker/picker": "^2.5.1",
+    "@react-native-picker/picker": "2.4.10",
     "@react-native/assets-registry": "^0.74.0",
     "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.1.8",
@@ -31,7 +32,7 @@
     "formik": "^2.4.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.5",
+    "react-native": "0.72.10",
     "react-native-dotenv": "^3.4.9",
     "react-native-element-dropdown": "^2.10.0",
     "react-native-gesture-handler": "~2.12.0",
