--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "expo-status-bar": "~1.6.0",
     "firebase": "^10.7.1",
     "formik": "^2.4.5",
+    "libphonenumber-js": "^1.10.59",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.10",
