--- a/package.json
+++ b/package.json
@@ -11,38 +11,37 @@
   },
   "dependencies": {
     "@expo/ngrok": "4.1.0",
-    "@expo/vector-icons": "^13.0.0",
-    "@expo/webpack-config": "^19.0.0",
+    "@expo/vector-icons": "^14.0.2",
     "@gorhom/bottom-sheet": "^4.5.1",
-    "@react-native-async-storage/async-storage": "1.18.2",
-    "@react-native-community/datetimepicker": "7.2.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/datetimepicker": "8.0.1",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-picker/picker": "2.4.10",
+    "@react-native-picker/picker": "2.7.5",
     "@react-native/assets-registry": "^0.74.0",
     "@react-navigation/drawer": "^6.6.6",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/stack": "^6.3.18",
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.6.2",
-    "expo": "~49.0.13",
-    "expo-checkbox": "~2.4.0",
-    "expo-image-picker": "~14.3.2",
-    "expo-status-bar": "~1.6.0",
+    "expo": "^51.0.22",
+    "expo-checkbox": "~3.0.0",
+    "expo-image-picker": "~15.0.7",
+    "expo-status-bar": "~1.12.1",
     "firebase": "^10.7.1",
     "formik": "^2.4.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.72.10",
+    "react-native": "0.74.3",
     "react-native-dotenv": "^3.4.9",
     "react-native-element-dropdown": "^2.10.0",
-    "react-native-gesture-handler": "~2.12.0",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-modern-datepicker": "^1.0.0-beta.91",
-    "react-native-reanimated": "~3.3.0",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
-    "react-native-svg": "13.9.0",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
+    "react-native-svg": "15.2.0",
     "react-native-swiper": "^1.6.0",
-    "react-native-web": "~0.19.6",
+    "react-native-web": "~0.19.10",
     "react-redux": "^8.1.3",
     "webpack-dev-server": "^4.15.1",
     "yup": "^1.3.3",
