--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "react-redux": "^8.1.3",
     "webpack-dev-server": "^4.15.1",
     "yup": "^1.3.3",
-    "yup-password": "^0.2.2"
+    "yup-password": "^0.2.2",
+    "@expo/metro-runtime": "~3.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
