--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.2.1",
     "@expo/ngrok": "4.1.0",
     "@expo/vector-icons": "^14.0.2",
     "@gorhom/bottom-sheet": "^4.5.1",
@@ -29,6 +30,7 @@
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.7.1",
     "formik": "^2.4.5",
+    "moment": "^2.30.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.3",
@@ -45,8 +47,7 @@
     "react-redux": "^8.1.3",
     "webpack-dev-server": "^4.15.1",
     "yup": "^1.3.3",
-    "yup-password": "^0.2.2",
-    "@expo/metro-runtime": "~3.2.1"
+    "yup-password": "^0.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
