--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "dependencies": {
     "@expo/ngrok": "4.1.0",
     "@expo/vector-icons": "^13.0.0",
-    "@expo/webpack-config": "^19.0.0",
     "@gorhom/bottom-sheet": "^4.5.1",
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/datetimepicker": "7.2.0",
@@ -24,7 +23,7 @@
     "@react-navigation/stack": "^6.3.18",
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.6.2",
-    "expo": "~49.0.13",
+    "expo": "^51.0.32",
     "expo-checkbox": "~2.4.0",
     "expo-image-picker": "~14.3.2",
     "expo-status-bar": "~1.6.0",
@@ -47,7 +46,8 @@
     "react-redux": "^8.1.3",
     "webpack-dev-server": "^4.15.1",
     "yup": "^1.3.3",
-    "yup-password": "^0.2.2"
+    "yup-password": "^0.2.2",
+    "@expo/metro-runtime": "~3.2.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
